Bug 90099. Make sure table cells and other odd frames are given views if they need them. r=dbaron,sr=kin